# Znakous_script

./: .gitignore  CMakeLists.txt  LabworkDescription.md  Language_BNF.txt  MyChanges.txt  README.md  ast.h
examples/: fibonacci.is
lib/: CMakeLists.txt  ast.h  environment.h  environment_fwd.h  evaluator.cpp  evaluator.h  get_name.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  lexer_helpers.cpp  lexer_helpers.h  logger.h  object.h  operators_executor.h  parser.cpp  parser.h  preprocess.cpp  preprocess.h  std_function_fwd.h  std_functions.cpp  std_functions.h  token.cpp  token.h  trie.h  usings.h  visitor.h
lib/ast/: ast.h
lib/ast/expressions/: expression.h  expression.tpp  expression_fwd.h
lib/ast/identifiers/: identifier.cpp  identifier.h
lib/ast/statements/: statement.h  statement_fwd.h  statements.cpp
lib/operators/: CMakeLists.txt  base_operator.h  operators.h  operators_executor.h
lib/operators/binary/: CMakeLists.txt
lib/operators/binary/add/: add.h
lib/operators/binary/bit_operators/: bit_executor.h
lib/operators/binary/comparers/: comparers.h
lib/operators/binary/div/: div.h
lib/operators/binary/mult/: mult.h
lib/operators/binary/sub/: sub.h
lib/operators/bit_operators/: bit_executor.h
lib/operators/comparers/: comparers.h
lib/operators/logical_operators.h/: and.h  or.h  xor.h
lib/operators/mod/: mod.h
lib/operators/power/: power.h
lib/operators/unary/: CMakeLists.txt  unary_minus.h  unary_plus.h
lib/std_functions/: CMakeLists.txt  base_std.h  std_func_spec.cpp  std_func_spec.h  truth_checker.h
lib/std_functions/abs/: abs.cpp  abs.h
lib/std_functions/insert/: insert.cpp  insert.h
lib/std_functions/join/: join.cpp  join.h
lib/std_functions/len/: len.cpp  len.h
lib/std_functions/lower_upper/: lower_upper.h
lib/std_functions/make_array/: make_array.cpp  make_array.h
lib/std_functions/parse_num/: parse_num.cpp  parse_num.h
lib/std_functions/print/: print.cpp  print.h  println.cpp  println.h
lib/std_functions/push_pop/: pop.cpp  pop.h  push.cpp  push.h
lib/std_functions/range/: range.cpp  range.h
lib/std_functions/read/: read.h
lib/std_functions/remove/: remove.cpp  remove.h
lib/std_functions/replace/: replace.cpp  replace.h
lib/std_functions/rnd/: rnd.cpp  rnd.h
lib/std_functions/round/: round.h
lib/std_functions/sort/: sort.cpp  sort.h
lib/std_functions/split/: split.cpp  split.h
lib/std_functions/sqrt/: sqrt.h
lib/std_functions/stacktrace/: stacktrace.cpp  stacktrace.h
lib/std_functions/to_string/: to_string.h
lib/std_functions_impls/: CMakeLists.txt  abs.cpp  abs.h  base_std.h  get_name.h  insert.h  join.h  len.cpp  len.h  lower_upper.h  parse_num.cpp  parse_num.h  pop.h  print.cpp  print.h  push.h  range.cpp  range.h  read.h  remove.cpp  remove.h  replace.h  rnd.cpp  rnd.h  round.h  sort.cpp  sort.h  split.h  sqrt.cpp  sqrt.h  stacktrace.cpp  stacktrace.h  std_func_include.h  std_func_spec.cpp  std_func_spec.h  to_string.cpp  to_string.h  truth_checker.cpp
tests/: CMakeLists.txt  files_tests.cpp  function_test.cpp  illegal_ops_test.cpp  interpreter_tests.cpp  lexer_tests.cpp  loop_and_branch_test.cpp  parser_tests.cpp  trie_tests.cpp
tests/expected/: fizzBuzz.txt  func_array.txt  lower_upper.txt  replace.txt  split.txt  test1.txt  to_string.txt  traverse.txt
tests/files/: a.is  abs.is  bit_oper.is  fibonacci.is  find_sqrt.is  fizzBuzz.is  for.is  func_array.is  func_getter.is  join.is  lower_upper.is  maximum.is  primaries.is  print_less.is  push_pop.is  range.is  replace.is  rnd.is  round.is  sort.is  split.is  sqrt.is  sum_range.is  test1.is  to_string.is  traverse.is  xor_array.is
tests/inerpreter_tests/: arrays_tests.cpp  cycles_tests.cpp  function_test.cpp  interpreter_tests.cpp  non_wild_tests.cpp  operators_tests.cpp  performance_tests.cpp  real_programs_tests.cpp  simplests_tests.cpp  strings_tests.cpp  usage_scenarios_tests.cpp  weirdos_tests.cpp
tests/interpreter_tests/: arrays_tests.cpp  cycles_tests.cpp  function_test.cpp  interpreter_tests.cpp  non_wild_tests.cpp  operators_tests.cpp  simplests_tests.cpp  slices_tests.cpp  wild_tests.cpp
